--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^2.6.0",
     "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.12"
   },
